Add dropdown filter

--- a/showcase/demo/datatableFilter.html
+++ b/showcase/demo/datatableFilter.html
@@ -10,7 +10,7 @@
                 caption: 'Filtering',
                 columns: [
                     {field: 'vin', headerText: 'Vin', filter: true},
-                    {field: 'brand', headerText: 'Brand', filter: true},
+                    {field: 'brand', headerText: 'Brand', filterSelect: {"" : "Select One", bmw : "BMW", fiat : "Fiat", mercedes : "Mercedes", jaguar : "Jaguar", renault : "Renault", volkswagen : "Volkswagen", volvo : "Volvo" } },
                     {field: 'year', headerText: 'Year', filter: true},
                     {field: 'color', headerText: 'Color', filter: true}
                 ],
