--- a/showcase/demo/datatableExpansion.html
+++ b/showcase/demo/datatableExpansion.html
@@ -30,7 +30,7 @@
                 ],
                 datasource: localData,
                 expandableRows: true,
-                rowExpandMode: 'single',
+                rowExpandMode: 'multiple',
                 expandedRowContent: function(car) {
                     return $('<div class="ui-grid" style="width:200px; margin-left: 50px;"></div>')
                             .append('<div class="ui-grid-row"><div class="ui-grid-col-12"><img src="showcase/resources/demo/images/car/' + car.brand + '-big.gif"/></div>')
@@ -47,6 +47,8 @@
             $(document).one('onRouteChange', function() {
                 $('#doc').puitabview('destroy');
             });
+
+
 
         });
     </script>
@@ -84,6 +86,8 @@
 
     <div class="content-section implementation">
         <div id="tblexpandable"></div>
+        <button id ="expandButton" type="button" onclick="expandAllRows()"> Expand Rows</button>
+        <button id ="collapseButton" type="button" onclick="collapseAllRows()"> Collapse Rows</button>
     </div>
 
     <div class="content-section source">
@@ -149,6 +153,14 @@ $(function() {
 
     <script language="javascript">
         SyntaxHighlighter.highlight();
+
+        function collapseAllRows() {
+                $('#tblexpandable').puidatatable('collapseAllRows');
+        }
+
+        function expandAllRows() {
+                $('#tblexpandable').puidatatable('expandAllRows');
+        }
     </script>
 
 </div>
