Add event to capture row count on filter

--- a/showcase/demo/datatableFilter.html
+++ b/showcase/demo/datatableFilter.html
@@ -30,6 +30,12 @@
                     rows: 10
                 }
             });
+
+            $('#tblfilter').puidatatable({
+                filterEvent: function(event, rowCount) {
+                    alert(JSON.stringify(rowCount));
+                }
+            })
             
             $('#globalFilter').puiinputtext();
             $('#doc').puitabview();
